--- a/LinkManager/App.config
+++ b/LinkManager/App.config
@@ -1,10 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  
-  <startup> 
-      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
-  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -17,9 +15,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  
   <appSettings>
-    <add key="FileName" value="asdasdasd" />
+    <add key="FileName" value="TextBox" />
   </appSettings>
-  
 </configuration>
