--- a/LinkManager/LinkManager.csproj
+++ b/LinkManager/LinkManager.csproj
@@ -170,9 +170,7 @@
     <Compile Include="Services\CategorieService.cs" />
     <Compile Include="Services\IService.cs" />
     <Compile Include="Services\LinksService.cs" />
-    <Compile Include="WindowDialog.xaml.cs">
-      <DependentUpon>WindowDialog.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="Services\Service.cs" />
     <Compile Include="WindowFormCategoria.xaml.cs">
       <DependentUpon>WindowFormCategoria.xaml</DependentUpon>
     </Compile>
@@ -192,10 +190,6 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="WindowDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="WindowFormCategoria.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
