aggiunta ricerca, fix sui form e liste

--- a/LinkManager/App.config
+++ b/LinkManager/App.config
@@ -16,6 +16,6 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="FileName" value="C:\Users\Riccardo\Desktop\3.sqlite" />
+    <add key="FileName" value="C:\Users\fastcode\Google Drive\Database\links.sqlite" />
   </appSettings>
 </configuration>
